--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-pdf": "^10.2.0",
-    "react-router-dom": "^7.9.6",
-    "xlsx": "^0.18.5"
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
